[metadata]
name = customer-account-service
version = 1.0.0

[nosetests]
verbosity=2
with-spec=1
spec-color=1
with-coverage=1
cover-package=service
cover-erase=1

[coverage:report]
show_missing = True

[flake8]
max-line-length = 120
exclude = .git,.venv,venv,__pycache__

[pylint]
max-line-length = 120
disable =
    C0103,
    C0114,
    C0115,
    C0116
